--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
             <!-- <a href="#" class="logo">Greenify</a> -->
             <div class="nav-links">
                  <a href="#"><i class="fas fa-house-user" style="color: #25b664;"></i></a>
-                 <a href="#">Sign up</a>
-                 <a href="#">Log in </a>
+                 <a href="signup.html">Sign up</a>
+                 <a href="signin.html">Log in </a>
                  <a href="#">Help & Support</a>
                  <a href="#">About</a>
                  <a href="#"><i class="fa-solid fa-circle-user"></i></a>
@@ -169,3 +169,4 @@
     </footer>
 </body>
 </html>
+
