--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
                  <a href="#"><i class="fas fa-house-user" style="color: #25b664;"></i></a>
                  <a href="signup.html">Sign up</a>
                  <a href="signin.html">Log in </a>
-                 <a href="#">Help & Support</a>
-                 <a href="#">About</a>
+                 <a href="hello.html">Help & Support</a>
+                 <a href="HELLO2.html">About</a>
                  <a href="#"><i class="fa-solid fa-circle-user"></i></a>
             </div>
         </div>
@@ -169,4 +169,5 @@
     </footer>
 </body>
 </html>
+
 
