--- a/environmentalectivities.html
+++ b/environmentalectivities.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
           <a href="environmentalectivities.html" class="active">Activities</a>
-          <a href="#">Quiz</a>
+          <a href="HELLO2.html">Quiz</a>
           <a href="#">Games</a>
           <a href="#">Community</a>
         </nav>
@@ -389,3 +389,4 @@
     </div>
   </body>
 </html>
+
