--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
         <section class="hero">
             <h1>Level Up Your Environmental Knowledge!</h1>
             <p>Embark on an exciting journey to save our planet through fun challenges, interactive learning, and real-world impact.</p>
-            <a href="#" class="eco-adventure">Start Your Eco Adventure</a>
+            <a href="environmentalectivities.html" class="eco-adventure">Start Your Eco Adventure</a>
         </section>
 
         <!-- Gamification Progress -->
@@ -169,5 +169,6 @@
     </footer>
 </body>
 </html>
+
 
 
