--- a/homepage2.html
+++ b/homepage2.html
@@ -68,7 +68,7 @@
           </a>
           <a
             class="flex items-center gap-3 text-lg text-gray-400 hover:text-white mb-4"
-            href="#"
+            href="HELLO2.html"
           >
             <span class="material-symbols-outlined">stadia_controller</span>
             <span>Games</span>
@@ -513,3 +513,4 @@
 
   </body>
 </html>
+
