--- a/homepage2.html
+++ b/homepage2.html
@@ -61,14 +61,14 @@
           </a>
           <a
             class="flex items-center gap-3 text-lg text-gray-400 hover:text-white mb-4"
-            href="#"
+            href="HELLO2.html"
           >
             <span class="material-symbols-outlined">help</span>
             <span>Quiz</span>
           </a>
           <a
             class="flex items-center gap-3 text-lg text-gray-400 hover:text-white mb-4"
-            href="HELLO2.html"
+            href=""
           >
             <span class="material-symbols-outlined">stadia_controller</span>
             <span>Games</span>
@@ -513,4 +513,5 @@
 
   </body>
 </html>
+
 
