--- a/homepage2.html
+++ b/homepage2.html
@@ -33,24 +33,30 @@
         </div>
         <nav class="flex-1 py-2">
           <a
-            href="#"
-            class="block py-2 px-3 rounded hover:bg-gray-700 transition"
-            >Dashboard</a
-          >
-          <a
-            href="#"
+            href="environmentalactivities.html"
             class="block py-2 px-3 rounded hover:bg-gray-700 transition"
             >Activities</a
           >
           <a
             href="#"
             class="block py-2 px-3 rounded hover:bg-gray-700 transition"
-            >Leaderboard</a
+            >Games</a
           >
           <a
             href="#"
             class="block py-2 px-3 rounded hover:bg-gray-700 transition"
-            >Profile</a
+            >Quize</a
+          >
+          <a
+            href="#"
+            class="block py-2 px-3 rounded hover:bg-gray-700 transition"
+            >Club</a
+          >
+
+          <a
+            href="#"
+            class="block py-2 px-3 rounded hover:bg-gray-700 transition"
+            >Communities</a
           >
         </nav>
       </aside>
@@ -333,3 +339,4 @@
     </script>
   </body>
 </html>
+
