--- a/environmentalectivities.html
+++ b/environmentalectivities.html
@@ -34,7 +34,7 @@
     />
     <span class="name">Jane Doe</span>
     <div class="dropdown"> <!-- NEW -->
-      <a href="#">Profile</a>
+      <a href="prof.html">Profile</a>
       <a href="#">Dashboard</a>
       <a href="#">Badges</a>
       <a href="#">Help</a>
@@ -389,4 +389,5 @@
     </div>
   </body>
 </html>
+
 
