--- a/homepage2.html
+++ b/homepage2.html
@@ -38,7 +38,7 @@
             >Activities</a
           >
           <a
-            href="#"
+            href="games.html"
             class="block py-2 px-3 rounded hover:bg-gray-700 transition"
             >Games</a
           >
@@ -339,4 +339,5 @@
     </script>
   </body>
 </html>
+
 
