--- a/home.html
+++ b/home.html
@@ -1,123 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Greenify - Environmental Studies for Students</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f9fdf9;
-      color: #333;
-    }
-    header {
-      background: #228B22;
-      color: white;
-      padding: 15px 30px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    header img {
-      height: 40px;
-    }
-    nav a {
-      color: white;
-      margin-left: 20px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .hero {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 50px;
-      background: #eafaf1;
-    }
-    .hero-text {
-      max-width: 50%;
-    }
-    .hero h1 {
-      font-size: 2.5em;
-      color: #004d26;
-    }
-    .hero button {
-      background: #228B22;
-      color: white;
-      padding: 12px 25px;
-      border: none;
-      cursor: pointer;
-      font-size: 1em;
-      border-radius: 5px;
-    }
-    .features {
-      padding: 40px;
-      text-align: center;
-    }
-    .features h2 {
-      color: #004d26;
-    }
-    .features .icons {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-      gap: 40px;
-    }
-    .icons div {
-      text-align: center;
-    }
-    footer {
-      background: #228B22;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 30px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <img src="greenify-logo.png" alt="Greenify Logo">
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Programs</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Greenify - Environmental Studies for Students</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f9fdf9;
+        color: #333;
+      }
+      header {
+        background: #3ce64a91;
+        color: white;
+        padding: 15px 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      header img.logo {
+        height: 40px;
+        border-radius: 8px;
+      }
+      nav a {
+        color: white;
+        margin-left: 20px;
+        text-decoration: none;
+        font-weight: bold;
+      }
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Environmental Studies for Students</h1>
-      <p>Learn how to protect the environment and make the world a greener place.</p>
-      <button>Learn More</button>
-    </div>
-    <div class="hero-image">
-      <!-- Add illustration here (students with plants) -->
-      <img src="students-illustration.png" alt="Students learning nature" width="400">
-    </div>
-  </section>
+      /* Profile Dropdown */
+      .profile-container {
+        position: relative;
+        display: inline-block;
+      }
+      .profile-btn {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        color: white;
+        font-weight: bold;
+      }
+      .profile-pic {
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+      }
+      .dropdown-menu {
+        position: absolute;
+        right: 0;
+        top: 50px;
+        background: #228b22;
+        border-radius: 8px;
+        display: none;
+        flex-direction: column;
+        min-width: 160px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      }
+      .dropdown-menu a {
+        color: white;
+        padding: 10px;
+        text-decoration: none;
+        display: block;
+      }
+      .dropdown-menu a:hover {
+        background: #1c6d1c;
+      }
+      .dropdown-menu.show {
+        display: flex;
+      }
 
-  <section class="features">
-    <h2>Learn How to Greenify The World</h2>
-    <p>Explore sustainability, recycling, and eco-friendly practices.</p>
-    <div class="icons">
-      <div>
-        ♻<br>Recycling
+      .hero {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 50px;
+        background: #eafaf1;
+      }
+      .hero-text {
+        max-width: 50%;
+      }
+      .hero h1 {
+        font-size: 2.5em;
+        color: #004d26;
+      }
+      .hero button {
+        background: #228b22;
+        color: white;
+        padding: 12px 25px;
+        border: none;
+        cursor: pointer;
+        font-size: 1em;
+        border-radius: 5px;
+      }
+      .features {
+        padding: 40px;
+        text-align: center;
+      }
+      .features h2 {
+        color: #004d26;
+      }
+      .features .icons {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        gap: 40px;
+      }
+      .icons div {
+        text-align: center;
+      }
+      footer {
+        background: #228b22;
+        color: white;
+        text-align: center;
+        padding: 15px;
+        margin-top: 30px;
+      }
+      .img {
+        border: 1px solid #ccc;
+        border-radius: 30px;
+      }
+      .logo {
+        border-radius: 20px;
+        height: 50px;
+      }
+      .navigation {
+        margin-left: 820px;
+      }
+      .text {
+        margin-left: 10px;
+        font-size: 24px;
+        font-weight: bold;
+        color: white;
+        font-family: "Arial", sans-serif;
+        color: #004d27c0;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <img src="logo-modified.png" alt="Greenify Logo" class="logo" />
+      <span class="text">Greenify</span>
+
+      <nav class="navigation">
+        <a href="home.html">Home</a>
+        <a href="#">Signup</a>
+        <a href="terms.html">About</a>
+      </nav>
+
+      <!-- Profile Dropdown -->
+      <div class="profile-container">
+        <button id="dropdownBtn" class="profile-btn">
+          <img src="https://i.pravatar.cc/40" alt="User" class="profile-pic" />
+        </button>
+
+        <div id="dropdownMenu" class="dropdown-menu">
+          <a href="#">Profile</a>
+          <a href="#">Contact</a>
+          <a href="#">Dashboard</a>
+          <a href="#">Badges</a>
+          <a href="#">Logout</a>
+        </div>
       </div>
-      <div>
-        🌱<br>Leaf
-      </div>
-      <div>
-        ⚡<br>Energy
-      </div>
-    </div>
-  </section>
+    </header>
 
-  <footer>
-    © 2025 Greenify | All Rights Reserved
-  </footer>
-</body>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Environmental Studies for Students</h1>
+        <p>
+          Learn how to protect the environment and make the world a greener
+          place.
+        </p>
+        <a href="homepage2.html"><button>Explore Now 🚀</button></a>
+      </div>
+      <div class="hero-image">
+        <img
+          src="STUDENT WITH PLANTS.png"
+          alt="Students learning nature"
+          width="400"
+          class="img"
+        />
+      </div>
+    </section>
 
+    <section class="features">
+      <h2>Learn How to Greenify The World</h2>
+      <p>Explore sustainability, recycling, and eco-friendly practices.</p>
+      <div class="icons">
+        <div>♻<br />Recycling</div>
+        <div>🌱<br />Leaf</div>
+        <div>⚡<br />Energy</div>
+      </div>
+    </section>
+
+    <footer>© 2025 Greenify | All Rights Reserved</footer>
+
+    <script>
+      const dropdownBtn = document.getElementById("dropdownBtn");
+      const dropdownMenu = document.getElementById("dropdownMenu");
+
+      dropdownBtn.addEventListener("click", (e) => {
+        e.stopPropagation();
+        dropdownMenu.classList.toggle("show");
+      });
+
+      document.addEventListener("click", (e) => {
+        if (
+          !dropdownBtn.contains(e.target) &&
+          !dropdownMenu.contains(e.target)
+        ) {
+          dropdownMenu.classList.remove("show");
+        }
+      });
+    </script>
+  </body>
 </html>
