--- a/homepage2.html
+++ b/homepage2.html
@@ -43,7 +43,7 @@
             >Games</a
           >
           <a
-            href="#"
+            href="quiz.html"
             class="block py-2 px-3 rounded hover:bg-gray-700 transition"
             >Quize</a
           >
@@ -339,5 +339,6 @@
     </script>
   </body>
 </html>
+
 
 
