--- a/home.html
+++ b/home.html
@@ -161,7 +161,7 @@
         <div id="dropdownMenu" class="dropdown-menu">
           <a href="#">Profile</a>
           <a href="#">Contact</a>
-          <a href="#">Dashboard</a>
+          <a href="dashboard.html">Dashboard</a>
           <a href="#">Badges</a>
           <a href="#">Logout</a>
         </div>
@@ -219,3 +219,4 @@
     </script>
   </body>
 </html>
+
