--- a/homepage2.html
+++ b/homepage2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamify</title>
+    <title>Greenyfy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
@@ -29,7 +29,7 @@
             class="material-symbols-outlined text-[var(--primary-color)] text-3xl"
             >hub</span
           >
-          <h1 class="text-xl font-bold">Gamify</h1>
+          <h1 class="text-xl font-bold">Greenify</h1>
         </div>
         <nav class="flex-1 py-2">
           <a
@@ -45,7 +45,7 @@
             >Games</a
           >
           <a
-            href="#"
+            href="dashboard.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             data-page="games"
             >dashboard</a
@@ -264,3 +264,4 @@
     </script>
   </body>
 </html>
+
