--- a/calendar.html
+++ b/calendar.html
@@ -32,7 +32,7 @@
         </div>
         <div id="days" class="days"></div>
         <div class="event-scheduler">
-            <h2 class="text-lg font-semibold mb-3 mt-6">Add New Event</h2>
+            <h2 class="text-lg font-semibold mb-3 mt-6"> New Events</h2>
             <form id="eventForm">
                 <div class="mb-2">
                     <label for="eventDate" class="block text-sm font-medium">Date:</label>
