--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Greenify - Environmental Studies for Students</title>
     <style>
       body {
@@ -14,18 +21,24 @@
       header {
         background: #3ce64a91;
         color: white;
-        padding: 15px 30px;
+        padding: 15px 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
       }
       header img.logo {
         height: 40px;
         border-radius: 8px;
       }
+      nav {
+        display: flex;
+        gap: 15px;
+        flex-wrap: wrap;
+        margin-top: 10px;
+      }
       nav a {
         color: white;
-        margin-left: 20px;
         text-decoration: none;
         font-weight: bold;
       }
@@ -33,7 +46,6 @@
       /* Profile Dropdown */
       .profile-container {
         position: relative;
-        display: inline-block;
       }
       .profile-btn {
         display: flex;
@@ -78,14 +90,17 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 50px;
+        padding: 50px 20px;
         background: #eafaf1;
+        flex-wrap: wrap;
+        gap: 20px;
       }
       .hero-text {
-        max-width: 50%;
+        flex: 1;
+        min-width: 280px;
       }
       .hero h1 {
-        font-size: 2.5em;
+        font-size: 2.2em;
         color: #004d26;
       }
       .hero button {
@@ -97,8 +112,17 @@
         font-size: 1em;
         border-radius: 5px;
       }
+      .hero-image {
+        flex: 1;
+        text-align: center;
+      }
+      .hero-image img {
+        max-width: 100%;
+        height: auto;
+      }
+
       .features {
-        padding: 40px;
+        padding: 40px 20px;
         text-align: center;
       }
       .features h2 {
@@ -109,10 +133,13 @@
         justify-content: center;
         margin-top: 20px;
         gap: 40px;
+        flex-wrap: wrap;
       }
       .icons div {
         text-align: center;
+        min-width: 100px;
       }
+
       footer {
         background: #228b22;
         color: white;
@@ -120,24 +147,67 @@
         padding: 15px;
         margin-top: 30px;
       }
-      .img {
-        border: 1px solid #ccc;
-        border-radius: 30px;
-      }
       .logo {
         border-radius: 20px;
         height: 50px;
       }
       .navigation {
-        margin-left: 820px;
+        margin-left: auto;
       }
       .text {
         margin-left: 10px;
         font-size: 24px;
         font-weight: bold;
-        color: white;
-        font-family: "Arial", sans-serif;
         color: #004d27c0;
+      }
+
+      /* Responsive adjustments */
+      @media (max-width: 768px) {
+        header {
+          flex-wrap: nowrap;
+          align-items: center;
+        }
+        .navigation {
+          display: none;
+          flex-direction: column;
+          width: 100%;
+          background: #228b22;
+          padding: 10px 0;
+          border-radius: 10px;
+        }
+        .navigation.show {
+          display: flex;
+        }
+        .hamburger {
+          display: block;
+          margin-left: auto;
+          background: transparent;
+          border: none;
+          font-size: 1.8em;
+          color: white;
+          cursor: pointer;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .hero h1 {
+          font-size: 1.5em;
+        }
+        .hero button {
+          width: 100%;
+        }
+        nav {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+        nav a {
+          margin: 5px 0;
+        }
+      }
+
+      /* Hide hamburger on desktop */
+      .hamburger {
+        display: none;
       }
     </style>
   </head>
@@ -146,9 +216,15 @@
       <img src="logo-modified.png" alt="Greenify Logo" class="logo" />
       <span class="text">Greenify</span>
 
-      <nav class="navigation">
+      <!-- Hamburger button (mobile only) -->
+      <button class="hamburger" id="hamburger">
+        <i class="fa fa-bars"></i>
+      </button>
+
+      <!-- Navigation -->
+      <nav class="navigation" id="navMenu">
         <a href="home.html">Home</a>
-        <a href="#">Signup</a>
+        <a href="signup.html">Signup</a>
         <a href="terms.html">About</a>
       </nav>
 
@@ -157,11 +233,10 @@
         <button id="dropdownBtn" class="profile-btn">
           <img src="https://i.pravatar.cc/40" alt="User" class="profile-pic" />
         </button>
-
         <div id="dropdownMenu" class="dropdown-menu">
           <a href="#">Profile</a>
           <a href="#">Contact</a>
-          <a href="dashboard.html">Dashboard</a>
+          <a href="#">Dashboard</a>
           <a href="#">Badges</a>
           <a href="#">Logout</a>
         </div>
@@ -175,11 +250,11 @@
           Learn how to protect the environment and make the world a greener
           place.
         </p>
-        <a href="homepage2.html"><button>Explore Now 🚀</button></a>
+        <button onclick="goToHomepage()">Explore Now 🚀</button>
       </div>
       <div class="hero-image">
         <img
-          src="STUDENT WITH PLANTS.png"
+          src="index_photo_cover-removebg-preview.png"
           alt="Students learning nature"
           width="400"
           class="img"
@@ -197,9 +272,131 @@
       </div>
     </section>
 
-    <footer>© 2025 Greenify | All Rights Reserved</footer>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-section about">
+          <h3>🌿 Greenify</h3>
+          <p>
+            An educational platform to inspire students to adopt sustainable,
+            eco-friendly practices and make the world greener, one step at a
+            time.
+          </p>
+        </div>
+
+        <div class="footer-section links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="home.html">🏠 Home</a></li>
+            <li><a href="terms.html">📖 About</a></li>
+            <li><a href="signup.html">📝 Signup</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section contact">
+          <h3>Contact</h3>
+          <p>📧 greenifyindia01@gamil.com</p>
+          <p>📍 Ahmedabad, India</p>
+        </div>
+
+        <div class="footer-section social">
+          <h3>Follow Us</h3>
+          <div class="social-icons">
+            <a href="https://www.instagram.com/greenifyindia01/">
+              <span>
+                <i class="fa-brands fa-instagram" style="color: #b197fc"></i>
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        © 2025 Greenify | Designed with 💚 for the Environment
+      </div>
+    </footer>
+
+    <style>
+      .footer {
+        background: linear-gradient(135deg, #004d26, #228b22);
+        color: white;
+        padding: 50px 20px 20px;
+        margin-top: 30px;
+        border-top-left-radius: 30px;
+        border-top-right-radius: 30px;
+        box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.3);
+      }
+
+      .footer-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        gap: 30px;
+        max-width: 1200px;
+        margin: auto;
+      }
+
+      .footer-section h3 {
+        margin-bottom: 15px;
+        font-size: 1.2em;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+        padding-bottom: 5px;
+      }
+
+      .footer-section p {
+        line-height: 1.6;
+        font-size: 0.95em;
+      }
+
+      .footer-section ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .footer-section ul li {
+        margin: 8px 0;
+      }
+
+      .footer-section ul li a {
+        color: #f1fdf1;
+        text-decoration: none;
+        transition: color 0.3s, transform 0.3s;
+        display: inline-block;
+      }
+
+      .footer-section ul li a:hover {
+        color: #ffe66d;
+        transform: translateX(5px);
+      }
+
+      .social-icons {
+        display: block;
+      }
+
+      .social-icons a {
+        background: rgba(255, 255, 255, 0.1);
+        padding: 10px;
+        border-radius: 50%;
+        font-size: 1.2em;
+        transition: background 0.3s, transform 0.3s;
+        color: white;
+        text-decoration: none;
+      }
+
+      .social-icons a:hover {
+        background: #ffe66d;
+        color: #004d26;
+        transform: scale(1.1);
+      }
+
+      .footer-bottom {
+        text-align: center;
+        margin-top: 30px;
+        font-size: 0.9em;
+        opacity: 0.8;
+      }
+    </style>
 
     <script>
+      // Profile dropdown
       const dropdownBtn = document.getElementById("dropdownBtn");
       const dropdownMenu = document.getElementById("dropdownMenu");
 
@@ -209,14 +406,23 @@
       });
 
       document.addEventListener("click", (e) => {
-        if (
-          !dropdownBtn.contains(e.target) &&
-          !dropdownMenu.contains(e.target)
-        ) {
+        if (!dropdownBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
           dropdownMenu.classList.remove("show");
         }
       });
+
+      // Hamburger menu
+      const hamburger = document.getElementById("hamburger");
+      const navMenu = document.getElementById("navMenu");
+
+      hamburger.addEventListener("click", () => {
+        navMenu.classList.toggle("show");
+      });
+
+      // Explore button
+      function goToHomepage() {
+        window.location.href = "loading.html";
+      }
     </script>
   </body>
 </html>
-
