--- a/homepage2.html
+++ b/homepage2.html
@@ -3,52 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamify</title>
+    <title>Homepage</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="logo-modified-removebg-preview.png"
+    />
   </head>
   <body class="bg-gray-900 text-white">
     <!-- Menu Button -->
-    <button
-      class="menu-toggle fixed top-4 left-4 z-50 bg-gray-800 text-white p-2 rounded"
+    <!-- <button
+      class="menu-toggle fixed top-4 left-4 z-50 bg-gray-800 text-white p-2 rounded md:hidden"
     >
       ☰
-    </button>
+    </button> -->
 
     <div class="relative flex size-full min-h-screen">
       <!-- Sidebar -->
       <aside
         id="sidebar"
-        class="sidebar fixed top-0 left-0 h-screen bg-gray-800/90 backdrop-blur-sm border-r border-gray-700 w-64 flex flex-col -translate-x-full transition-transform duration-300 pl-12"
+        class="sidebar fixed top-0 left-0 h-screen bg-gray-800/90 backdrop-blur-sm border-r border-gray-700 w-64 flex flex-col -translate-x-full md:translate-x-0 transition-transform duration-300 pl-6 md:pl-12 z-40"
       >
         <div class="p-4 flex items-center gap-2">
-          <span
-            class="material-symbols-outlined text-[var(--primary-color)] text-3xl"
-            >hub</span
-          >
-          <h1 class="text-xl font-bold">Gamify</h1>
+          <img
+            src="logo-modified-removebg-preview.png"
+            alt="Logo"
+            class="h-10 w-10 rounded-lg"
+          />
+          <h1 class="text-xl font-bold">Greenify</h1>
         </div>
         <nav class="flex-1 py-2">
           <a
             href="#"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             data-page="activities"
-            >Activities</a
+            >Activities 🎭</a
           >
           <a
             href="games.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             data-page="games"
-            >Games</a
+            >Games 🎮</a
           >
           <a
-            href="dashboard.html"
+            href="quiz.html"
             class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
             data-page="games"
-            >dashboard</a
+            >Quizzes 🧩</a
+          >
+
+          <a
+            href="news.html"
+            class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
+            data-page="games"
+            >News 📰</a
+          >
+          <a
+            href="modules.html"
+            class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
+            data-page="games"
+            >Modules 📑</a
+          >
+          <a
+            href="calender.html"
+            class="menu-item block py-2 px-3 rounded hover:bg-gray-700 transition"
+            data-page="games"
+            >Calender 🗓️</a
           >
         </nav>
       </aside>
@@ -56,13 +82,27 @@
       <!-- Main Content -->
       <div
         id="main"
-        class="flex-grow ml-0 pl-16 transition-all duration-300 p-8"
+        class="flex-grow ml-0 md:ml-64 transition-all duration-300 p-4 sm:p-6 md:p-8"
       >
         <!-- Header -->
-        <header class="flex justify-between items-center mb-8">
-          <h1 id="pageTitle" class="text-3xl font-bold">Welcome</h1>
+        <header
+          class="flex flex-col sm:flex-row gap-4 sm:gap-0 sm:justify-between sm:items-center mb-6 sm:mb-8"
+        >
+          <!-- Left section: menu button (mobile) + title -->
+          <div class="flex items-center justify-between w-full sm:w-auto">
+            <!-- Menu Button (only on mobile) -->
+            <button
+              class="menu-toggle bg-gray-800 text-white p-2 rounded md:hidden"
+            >
+              ☰
+            </button>
+            <h1 id="pageTitle" class="text-2xl sm:text-3xl font-bold ml-2">
+              Welcome
+            </h1>
+          </div>
+
+          <!-- Right section: dropdown -->
           <div class="relative">
-            <!-- Dropdown Button -->
             <button
               id="dropdownBtn"
               class="flex items-center gap-2 bg-gray-800 px-3 py-2 rounded-lg hover:bg-gray-700"
@@ -101,6 +141,299 @@
           class="bg-gray-800 p-6 rounded-2xl shadow-md min-h-[60vh] flex flex-col items-center justify-center text-gray-400"
         >
           <!-- Initially empty, will fill when menu items clicked -->
+
+          <div
+            class="flex flex-col items-center justify-center text-center p-8 h-full relative overflow-hidden"
+          >
+            <!-- Background -->
+            <div
+              class="absolute inset-0 bg-gradient-to-br from-green-800/20 via-transparent to-blue-800/20 animate-gradient"
+            ></div>
+
+            <!-- Glassmorphism Card -->
+            <div
+              class="bg-white/10 backdrop-blur-md rounded-2xl shadow-xl p-8 max-w-xl w-full border border-white/20 relative z-10"
+            >
+              <!-- Streak Badge -->
+              <div id="streakBadge" class="streak-badge mb-4">
+                🔥 Daily Streak: <span id="streakCount">1</span> days
+              </div>
+
+              <h2 class="text-3xl font-extrabold text-green-300 drop-shadow-lg">
+                👋 Welcome, Jane!
+              </h2>
+              <p class="mt-2 text-gray-300">
+                Ready for your next step in
+                <span class="text-green-200 font-semibold">Greenify</span> 🌍
+              </p>
+
+              <!-- Boxes Section -->
+              <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 mt-8">
+                <!-- Fact Box -->
+                <div class="flex flex-col items-center">
+                  <div class="scene">
+                    <div id="factBox" class="cube">
+                      <div class="face front">🌍</div>
+                      <div class="face back">🌱</div>
+                      <div class="face right">☀️</div>
+                      <div class="face left">💧</div>
+                      <div class="face top">🐝</div>
+                      <div class="face bottom">🌳</div>
+                    </div>
+                  </div>
+                  <p class="text-xs text-gray-300 mt-2">
+                    Click to reveal Fact 🔷
+                  </p>
+                  <div
+                    id="factCard"
+                    class="mt-4 bg-cyan-900/40 border border-cyan-500/30 rounded-xl p-4 text-left hidden w-full"
+                  >
+                    <p class="text-sm text-cyan-300 font-semibold">
+                      🔷 Eco Fact
+                    </p>
+                    <p id="ecoFact" class="text-gray-300 text-sm mt-1"></p>
+                  </div>
+                </div>
+
+                <!-- Challenge Box -->
+                <div class="flex flex-col items-center">
+                  <div class="scene">
+                    <div id="challengeBox" class="cube challenge">
+                      <div class="face front">💡</div>
+                      <div class="face back">🚶</div>
+                      <div class="face right">♻️</div>
+                      <div class="face left">🍲</div>
+                      <div class="face top">🔌</div>
+                      <div class="face bottom">🌿</div>
+                    </div>
+                  </div>
+                  <p class="text-xs text-gray-300 mt-2">
+                    Click to reveal Challenge 🟩
+                  </p>
+                  <div
+                    id="challengeCard"
+                    class="mt-4 bg-green-900/40 border border-green-500/30 rounded-xl p-4 text-left hidden w-full"
+                  >
+                    <p class="text-sm text-green-300 font-semibold">
+                      🟩 Eco Challenge
+                    </p>
+                    <p id="ecoChallenge" class="text-gray-300 text-sm mt-1"></p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Footer -->
+              <p class="mt-8 text-sm text-gray-400 italic">
+                "Small steps today, a greener tomorrow." 🌍💚
+              </p>
+            </div>
+          </div>
+
+          <style>
+            /* Background animation */
+            @keyframes gradient {
+              0% {
+                background-position: 0% 50%;
+              }
+              50% {
+                background-position: 100% 50%;
+              }
+              100% {
+                background-position: 0% 50%;
+              }
+            }
+            .animate-gradient {
+              background-size: 200% 200%;
+              animation: gradient 10s ease infinite;
+            }
+
+            /* Scene */
+            .scene {
+              width: 100px;
+              height: 100px;
+              perspective: 600px;
+            }
+
+            /* Cube (3D Box) */
+            .cube {
+              width: 100px;
+              height: 100px;
+              position: relative;
+              transform-style: preserve-3d;
+              transform: rotateX(0deg) rotateY(0deg);
+              transition: transform 2s ease-out;
+              cursor: pointer;
+            }
+
+            .cube.challenge .face {
+              background: linear-gradient(135deg, #22c55e, #16a34a);
+            }
+            .cube .face {
+              position: absolute;
+              width: 100px;
+              height: 100px;
+              background: linear-gradient(135deg, #06b6d4, #3b82f6);
+              border: 2px solid rgba(255, 255, 255, 0.2);
+              border-radius: 12px;
+              font-size: 2rem;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+
+            /* Position faces */
+            .front {
+              transform: rotateY(0deg) translateZ(50px);
+            }
+            .back {
+              transform: rotateY(180deg) translateZ(50px);
+            }
+            .right {
+              transform: rotateY(90deg) translateZ(50px);
+            }
+            .left {
+              transform: rotateY(-90deg) translateZ(50px);
+            }
+            .top {
+              transform: rotateX(90deg) translateZ(50px);
+            }
+            .bottom {
+              transform: rotateX(-90deg) translateZ(50px);
+            }
+
+            /* Streak Badge */
+            .streak-badge {
+              background: linear-gradient(90deg, #facc15, #f97316);
+              color: #1f2937;
+              font-weight: bold;
+              padding: 8px 16px;
+              border-radius: 12px;
+              display: inline-block;
+              box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+              font-size: 1rem;
+              animation: pulse 1.5s infinite alternate;
+            }
+
+            /* Gentle pulse animation */
+            @keyframes pulse {
+              0% {
+                transform: scale(1);
+              }
+              100% {
+                transform: scale(1.05);
+              }
+            }
+
+            /* Glow animation when streak increases */
+            .glow {
+              animation: glowAnim 1s ease forwards;
+            }
+            @keyframes glowAnim {
+              0% {
+                box-shadow: 0 0 10px #facc15;
+                transform: scale(1);
+              }
+              50% {
+                box-shadow: 0 0 20px #facc15, 0 0 30px #f97316;
+                transform: scale(1.1);
+              }
+              100% {
+                box-shadow: 0 0 10px #facc15;
+                transform: scale(1);
+              }
+            }
+          </style>
+
+          <script>
+            const ecoFacts = [
+              "Trees absorb CO₂ and provide oxygen 🌳",
+              "Bees pollinate 1/3 of the food we eat 🐝",
+              "Turning off electronics saves energy ⚡",
+              "Recycling one can saves enough energy to power a TV for 3 hours ♻️",
+              "Composting reduces food waste 🌱",
+            ];
+            const challenges = [
+              "Unplug devices not in use 🔌",
+              "Pick up 3 pieces of litter today 🗑️",
+              "Use public transport or walk 🚶",
+              "Try a meat-free meal 🍲",
+              "Recycle plastic bottles ♻️",
+            ];
+
+            // --- STREAK LOGIC ---
+            const streakCountEl = document.getElementById("streakCount");
+            const streakBadge = document.getElementById("streakBadge");
+
+            const today = new Date();
+            const todayStr = today.toISOString().split("T")[0];
+            let lastVisit = localStorage.getItem("lastVisit");
+            let streak = parseInt(localStorage.getItem("streak")) || 0;
+
+            const yesterday = new Date();
+            yesterday.setDate(today.getDate() - 1);
+            const yesterdayStr = yesterday.toISOString().split("T")[0];
+
+            let streakIncreased = false;
+
+            if (lastVisit === todayStr) {
+              // Already visited today, do nothing
+            } else if (lastVisit === yesterdayStr) {
+              streak += 1; // Continue streak
+              streakIncreased = true;
+            } else {
+              streak = 1; // Reset streak
+              streakIncreased = true;
+            }
+
+            // Save streak
+            localStorage.setItem("lastVisit", todayStr);
+            localStorage.setItem("streak", streak);
+
+            // Display streak
+            streakCountEl.textContent = streak;
+
+            // Glow animation if streak increased
+            if (streakIncreased) {
+              streakBadge.classList.add("glow");
+              setTimeout(() => streakBadge.classList.remove("glow"), 1000);
+            }
+
+            // --- FACT BOX ---
+            const factBox = document.getElementById("factBox");
+            const factCard = document.getElementById("factCard");
+            const ecoFact = document.getElementById("ecoFact");
+
+            factBox.addEventListener("click", () => {
+              const x = Math.floor(Math.random() * 4) * 90;
+              const y = Math.floor(Math.random() * 4) * 90;
+              factBox.style.transform = `rotateX(${x + 360}deg) rotateY(${
+                y + 360
+              }deg)`;
+              setTimeout(() => {
+                ecoFact.textContent =
+                  ecoFacts[Math.floor(Math.random() * ecoFacts.length)];
+                factCard.classList.remove("hidden");
+              }, 2000);
+            });
+
+            // --- CHALLENGE BOX ---
+            const challengeBox = document.getElementById("challengeBox");
+            const challengeCard = document.getElementById("challengeCard");
+            const ecoChallenge = document.getElementById("ecoChallenge");
+
+            challengeBox.addEventListener("click", () => {
+              const x = Math.floor(Math.random() * 4) * 90;
+              const y = Math.floor(Math.random() * 4) * 90;
+              challengeBox.style.transform = `rotateX(${x + 360}deg) rotateY(${
+                y + 360
+              }deg)`;
+              setTimeout(() => {
+                ecoChallenge.textContent =
+                  challenges[Math.floor(Math.random() * challenges.length)];
+                challengeCard.classList.remove("hidden");
+              }, 2000);
+            });
+          </script>
           <span class="text-lg">Select an option from the menu</span>
         </div>
       </div>
@@ -210,7 +543,7 @@
       // Function to render activity cards
       function renderActivities() {
         let html = `<h2 class="text-2xl font-semibold mb-4 text-white">🌍 Environmental Activities</h2>
-              <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 w-full">`;
+              <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6 w-full">`;
 
         activitiesData.forEach((activity) => {
           html += `
@@ -235,7 +568,9 @@
             <span>👥 ${activity.participants}</span>
           </div>
         </div>
-        <button class="mt-4 bg-black text-white py-2 rounded-lg font-semibold">Start Activity</button>
+        <button class="mt-4 bg-black text-white py-2 px-3 rounded-lg font-semibold text-sm sm:text-base">
+          Start Activity
+        </button>
       </div>
     `;
         });
